FIX : blurry logo

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -23,4 +23,5 @@
 
 .logo {
     max-width: 120px;
+    image-rendering: -webkit-optimize-contrast;
 }
