--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -25,6 +25,7 @@
 
 .logo {
     max-width: 160px;
+    image-rendering: -webkit-optimize-contrast;
 }
 
 .linksContainer {
